fix(hamburger): 漢堡選單 自動關閉

--- a/about.html
+++ b/about.html
@@ -21,13 +21,13 @@
   <div class="nav_expand"><a class="logo" href="https://www.intelligentcarry.com/"></a>
     <ul>
       <li>
-        <p> <a href="https://www.intelligentcarry.com/">首頁</a></p>
+        <p> <a href="https://www.intelligentcarry.com/" class="back_home_btn">首頁</a></p>
       </li>
       <li>
-        <p><a href="about.html">關於我們</a></p>
+        <p><a href="about.html" class="about_btn">關於我們</a></p>
       </li>
       <li>
-        <p><a href="contact.html">聯絡我們</a></p>
+        <p><a href="contact.html" class="contact_btn">聯絡我們</a></p>
       </li>
     </ul>
   </div>
@@ -42,13 +42,13 @@
   <div class="nav_menu">
     <ul>
       <li>
-        <p> <a href="https://www.intelligentcarry.com/">首頁</a></p>
+        <p> <a href="https://www.intelligentcarry.com/" class="back_home_btn">首頁</a></p>
       </li>
       <li>
-        <p><a href="about.html">關於我們</a></p>
+        <p><a href="about.html" class="about_btn">關於我們</a></p>
       </li>
       <li>
-        <p><a href="contact.html">聯絡我們</a></p>
+        <p><a href="contact.html" class="contact_btn">聯絡我們</a></p>
       </li>
     </ul>
   </div>
@@ -96,7 +96,6 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/velocity.min.js"></script>
-<script src="js/swiper.min.js"></script>
 <script src="min/app.min.js"></script>
 </body>
 
